doc_test_output.txt
    Finished `test` profile [unoptimized + debuginfo] target(s) in 0.23s
   Doc-tests pulseengine_mcp_auth

running 10 tests
test mcp-auth/src/lib.rs - (line 10) ... ignored
test mcp-auth/src/lib.rs - (line 129) ... ignored
test mcp-auth/src/lib.rs - (line 150) ... ignored
test mcp-auth/src/lib.rs - (line 184) ... ignored
test mcp-auth/src/lib.rs - (line 203) ... ignored
test mcp-auth/src/lib.rs - (line 218) ... ignored
test mcp-auth/src/lib.rs - (line 240) ... ignored
test mcp-auth/src/lib.rs - (line 29) ... ignored
test mcp-auth/src/lib.rs - (line 51) ... ignored
test mcp-auth/src/lib.rs - (line 97) ... ignored

test result: ok. 0 passed; 0 failed; 10 ignored; 0 measured; 0 filtered out; finished in 0.00s

   Doc-tests pulseengine_mcp_cli

running 1 test
test mcp-cli/src/lib.rs - (line 16) ... ignored

test result: ok. 0 passed; 0 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.00s

   Doc-tests pulseengine_mcp_cli_derive

running 2 tests
test mcp-cli-derive/src/lib.rs - derive_mcp_backend (line 71) ... ignored
test mcp-cli-derive/src/lib.rs - derive_mcp_config (line 27) ... ignored

test result: ok. 0 passed; 0 failed; 2 ignored; 0 measured; 0 filtered out; finished in 0.00s

   Doc-tests pulseengine_mcp_external_validation

running 1 test
test mcp-external-validation/src/lib.rs - (line 17) - compile ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.22s

   Doc-tests pulseengine_mcp_logging

running 1 test
test mcp-logging/src/lib.rs - (line 11) ... ignored

test result: ok. 0 passed; 0 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.00s

   Doc-tests pulseengine_mcp_monitoring

running 1 test
test mcp-monitoring/src/lib.rs - (line 12) ... ignored

test result: ok. 0 passed; 0 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.00s

   Doc-tests pulseengine_mcp_protocol

running 1 test
test mcp-protocol/src/lib.rs - (line 9) ... ok

test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.40s

   Doc-tests pulseengine_mcp_security

running 1 test
test mcp-security/src/lib.rs - (line 12) ... ignored

test result: ok. 0 passed; 0 failed; 1 ignored; 0 measured; 0 filtered out; finished in 0.00s

   Doc-tests pulseengine_mcp_server

running 1 test
test mcp-server/src/lib.rs - (line 8) - compile ... FAILED

failures:

---- mcp-server/src/lib.rs - (line 8) stdout ----
error[E0432]: unresolved import `mcp_server`
 --> mcp-server/src/lib.rs:9:5
  |
2 | use mcp_server::{McpServer, McpBackend, ServerConfig};
  |     ^^^^^^^^^^ use of unresolved module or unlinked crate `mcp_server`
  |
  = help: if you wanted to use a crate named `mcp_server`, use `cargo add mcp_server` to add it to your `Cargo.toml`

error[E0107]: type alias takes 1 generic argument but 2 generic arguments were supplied
  --> mcp-server/src/lib.rs:61:20
   |
54 | async fn main() -> Result<(), Box<dyn std::error::Error>> {
   |                    ^^^^^^   ---------------------------- help: remove the unnecessary generic argument
   |                    |
   |                    expected 1 generic argument
   |
note: type alias defined here, with 1 generic parameter: `T`
  --> /Users/r/git/mcp-loxone-seperation/pulseengine-mcp/mcp-protocol/src/error.rs:7:10
   |
7  | pub type Result<T> = std::result::Result<T, Error>;
   |          ^^^^^^ -

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0432.
For more information about an error, try `rustc --explain E0107`.
Couldn't compile the test.

failures:
    mcp-server/src/lib.rs - (line 8)

test result: FAILED. 0 passed; 1 failed; 0 ignored; 0 measured; 0 filtered out; finished in 0.20s

error: doctest failed, to rerun pass `-p pulseengine-mcp-server --doc`
